2008-10-06 [colin]	3.6.0cvs7

	* src/common/ssl.c
		Fix return value when setting client cert

2008-10-04 [colin]	3.6.0cvs6

	* src/mimeview.c
		Fix bug 1742, 'Attachment list contents not 
		visible/scrollable'

2008-10-04 [paul]	3.6.0cvs5

	* src/mainwindow.c
		fix failure of Hide toolbar option on restart

2008-10-04 [colin]	3.6.0cvs4

	* src/addressbook.c
	* src/compose.c
	* src/mainwindow.c
	* src/messageview.c
	* src/summaryview.c
		Maemo: Fix bug 1737, Crashes upon opening

2008-10-04 [paul]	3.6.0cvs3

	* po/pt_BR.po
		submitted (just a little late) by Frederico
		Goncalves Guimaraes

2008-10-03 [wwp]	3.6.0cvs2

	* po/fr.po
		Many fixes, mostly in menus and accelerators.

2008-10-03 [colin]	3.6.0cvs1

	* src/gtk/filesel.c
		Allow network mounts with new GTKs: they're
		available via FUSE mounts and we don't need
		GVFS.

2008-10-03 [paul]	3.6.0

	* NEWS
	* README
	* RELEASE_NOTES	
		3.6.0 released!

2008-10-03 [paul]	3.5.0cvs145

	* configure.ac
	* po/bg.po
	* po/nl.po
	* po/ru.po
	* po/sv.po
		new translations. added by Yasen Pramatarov,
		Marcel Pol, Aleksei Miheev, and Lars Persson Fink
	* po/ca.po
	* po/de.po
	* po/fi.po
	* po/fr.po
	* po/hu.po
	* po/it.po
	* po/pl.po
	* po/zh_CN.po
		updated translations. submitted by Miquel Oliete,
		Stephan Sachse, Flammie Pirinen, wwp, Pader Rezo,
		Andrea Spadaccini, Emilian Nowak, and Ralph Young

2008-10-02 [colin]	3.5.0cvs144

	* src/common/session.c
		Fix crash when connection fails on windows

2008-10-01 [colin]	3.5.0cvs143

	* src/imap.c
		Real fix for FS-unsafe chars on win32

2008-10-01 [colin]	3.5.0cvs142

	* src/imap.c
		Encode prohibited filenames on win32

2008-09-30 [mones]	3.5.0cvs141

	* src/ldapctrl.c
	* src/main.c
	* src/prefs_themes.c
	* src/printing.c
		Fix output of some debug messages

2008-09-30 [colin]	3.5.0cvs140

	* src/addrbook.c
	* src/addrharvest.c
	* src/compose.c
	* src/jpilot.c
	* src/mh.c
	* src/prefs_themes.c
	* src/procheader.c
	* src/procmime.c
	* src/summaryview.c